--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "node src/server.js",
     "predeploy": "node src/server.js",
     "deploy": "git push heroku main",
+    "postdeploy": "npm run migrate:production",
     "migrate": "postgrator --config postgrator-config.js",
-    "migrate:test": "env NODE_ENV=test npm run migrate"
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate"
   },
   "keywords": [],
   "engines": {
@@ -26,6 +28,7 @@
     "knex": "^0.21.14",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "postgrator-cli": "^3.2.0",
     "winston": "^3.3.3",
     "xss": "^1.0.8"
   },
